@@ -9,13 +9,18 @@ import {
   SCIENCE_CHALLENGE_WAR_MULTI,
   ONE_SHOT_CHALLENGE_REWARD,
   ZERO,
-  NO_HAB_CHALLENGE_MULTI
+  NO_HAB_CHALLENGE_MULTI,
+  ONE,
+  EXPANDING_CHALLENGE_DOUBLING_TIME,
+  EXPANDING_CHALLENGE_REWARD
 } from "../CONSTANTS";
 
 export class ChallengeManager {
   challenges: Challenge[];
   activeChallenge: Challenge;
   completed = ZERO;
+  expandingFactor = ONE;
+  expandingStartDate = 0;
   //#region Challenges
   baseChallenge: Challenge;
   droneChallenge: Challenge;
@@ -25,6 +30,7 @@ export class ChallengeManager {
   oneShotChallenge: Challenge;
   noHabSpaceChallenge: Challenge;
   noPhysics: Challenge;
+  expandingChallenge: Challenge;
   //#endregion
   constructor() {
     this.challenges = [];
@@ -48,6 +54,7 @@ export class ChallengeManager {
     this.oneShotChallenge = this.challenges.find((c) => c.id === "5");
     this.noHabSpaceChallenge = this.challenges.find((c) => c.id === "6");
     this.noPhysics = this.challenges.find((c) => c.id === "7");
+    this.expandingChallenge = this.challenges.find((c) => c.id === "8");
 
     //  Drone challenge
     const droneChallengeBonus = new Bonus(
@@ -94,14 +101,28 @@ export class ChallengeManager {
     rm.spaceStations.forEach((spaceStation) => {
       spaceStation.habSpaceStack.bonuses.push(moreHabBonus);
     });
+
+    //  Expanding challenge
+    const expandingBonus = new Bonus(
+      this.expandingChallenge,
+      new Decimal(EXPANDING_CHALLENGE_REWARD)
+    );
+    sm.velocityBonusStack.bonuses.push(expandingBonus);
+    sm.accelerationStack.bonuses.push(expandingBonus);
+    rm.searcher.prodEfficiency.bonuses.push(expandingBonus);
   }
   startChallenge(challenge: Challenge): boolean {
     if (this.activeChallenge) return false;
     this.activeChallenge = challenge;
+    if (this.expandingChallenge.isActive) {
+      this.expandingStartDate = Date.now();
+    }
     return true;
   }
   quitChallenge() {
     this.activeChallenge = null;
+    this.expandingFactor = ONE;
+    this.expandingStartDate = 0;
   }
   onEnemyDefeated(enemyLevel: number) {
     this.activeChallenge?.advance(enemyLevel);
@@ -116,6 +137,15 @@ export class ChallengeManager {
     for (let i = 0, n = this.challenges.length; i < n; i++) {
       this.completed = this.completed.plus(this.challenges[i].quantity);
     }
+    if (this.expandingChallenge.isActive) {
+      const diff = (Date.now() - this.expandingStartDate) / 1000;
+      this.expandingFactor = Decimal.pow(
+        2,
+        diff / EXPANDING_CHALLENGE_DOUBLING_TIME
+      );
+    } else {
+      this.expandingFactor = ONE;
+    }
   }
 
   //#region Save and Load
@@ -124,6 +154,7 @@ export class ChallengeManager {
       c: this.challenges.map((ch) => ch.getSave())
     };
     if (this.activeChallenge) save.a = this.activeChallenge.id;
+    if (this.expandingStartDate > 0) save.e = this.expandingStartDate;
     return save;
   }
   load(save: any) {
@@ -135,6 +166,9 @@ export class ChallengeManager {
     }
     if ("a" in save) {
       this.activeChallenge = this.challenges.find((ch) => ch.id === save.a);
+    }
+    if ("e" in save) {
+      this.expandingStartDate = save.e;
     }
   }
   afterLoad() {
