@@ -27,3 +27,7 @@
 .mega-qta {
   margin-left: 0.4rem;
 }
+.info-icon {
+  font-size: smaller;
+  margin-left: 1rem;
+}
